--- a/user-rpc-dubbo-provider/pom.xml
+++ b/user-rpc-dubbo-provider/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.cn</groupId>
-    <artifactId>user-rpc-dubbo-service</artifactId>
+    <artifactId>user-rpc-dubbo-provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>user-rpc-dubbo-service</name>
+    <name>user-rpc-dubbo-provider</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -15,6 +15,7 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -22,7 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
