--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,19 @@
                 <artifactId>dubbo-spring-boot-starter</artifactId>
                 <version>2.0.0</version>
             </dependency>
+
+            <!--zookeeper依赖-->
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>3.4.11</version>
+            </dependency>
+            <dependency>
+                <groupId>com.101tec</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>0.10</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
