--- a/user-rpc-dubbo-provider/src/main/resources/application.properties
+++ b/user-rpc-dubbo-provider/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=10010
 
+#服务名称
+spring.dubbo.application.name=user-rpc-dubbo-provider
+#注册中心
+spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo协议
+spring.dubbo.protocal.name=dubbo
+spring.dubbo.protocal.port=20880
+#声明需要暴露的接口
+spring.dubbo.scan=com.cn.userrpcdubboprovider.service
