--- a/pom.xml
+++ b/pom.xml
@@ -31,23 +31,13 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- dubbo -->
+            <!-- Apache Dubbo  -->
             <dependency>
-                <groupId>com.alibaba.spring.boot</groupId>
-                <artifactId>dubbo-spring-boot-starter</artifactId>
-                <version>2.0.0</version>
-            </dependency>
-
-            <!--zookeeper依赖-->
-            <dependency>
-                <groupId>org.apache.zookeeper</groupId>
-                <artifactId>zookeeper</artifactId>
-                <version>3.4.11</version>
-            </dependency>
-            <dependency>
-                <groupId>com.101tec</groupId>
-                <artifactId>zkclient</artifactId>
-                <version>0.10</version>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-dependencies-bom</artifactId>
+                <version>2.7.7</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
         </dependencies>
