--- a/user-rpc-dubbo-provider/pom.xml
+++ b/user-rpc-dubbo-provider/pom.xml
@@ -21,6 +21,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.cn</groupId>
+            <artifactId>dubbo-rpc-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
