--- a/user-rpc-dubbo-consumer/pom.xml
+++ b/user-rpc-dubbo-consumer/pom.xml
@@ -21,9 +21,21 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.cn</groupId>
+            <artifactId>dubbo-rpc-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
