--- a/nacos-rpc-dubbo-provider/pom.xml
+++ b/nacos-rpc-dubbo-provider/pom.xml
@@ -2,17 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+
     <groupId>com.cn</groupId>
     <artifactId>nacos-rpc-dubbo-provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>nacos-rpc-dubbo-provider</name>
     <description>Demo project for Spring Boot</description>
+
+    <parent>
+        <groupId>com.cn</groupId>
+        <artifactId>dubbomanage</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <properties>
         <java.version>1.8</java.version>
