--- a/nacos-rpc-dubbo-provider/src/main/resources/application.properties
+++ b/nacos-rpc-dubbo-provider/src/main/resources/application.properties
@@ -3,8 +3,10 @@ server.port=10003
 ## Nacos registry address
 dubbo.application.name=nacos-rpc-dubbo-provider
 
-dubbo.registry.address=nacos://127.0.0.1:8848
-##如果要使用自己创建的命名空间可以使用下面2种方式
+
+#nacos.discovery.server-addr=127.0.0.1:8848
+dubbo.registry.address=nacos://127.0.0.1:8848?username=nacos&password=nacos
+##锟斤拷锟揭癸拷锟斤拷约锟斤拷锟斤拷锟斤拷锟斤拷锟斤拷锟斤拷占锟斤拷锟斤拷使锟斤拷锟斤拷锟斤拷2锟街凤拷式
 #dubbo.registry.address = nacos://10.20.153.10:8848?namespace=5cbb70a5-xxx-xxx-xxx-d43479ae0932
 #dubbo.registry.parameters.namespace=5cbb70a5-xxx-xxx-xxx-d43479ae0932
 
@@ -13,3 +15,4 @@ dubbo.protocol.name = dubbo
 dubbo.protocol.port = -1
 
 dubbo.scan.base-packages=com.cn.nacosrpcdubboprovider.service
+
