--- a/nacos-rpc-dubbo-consumer/pom.xml
+++ b/nacos-rpc-dubbo-consumer/pom.xml
@@ -2,40 +2,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.cn</groupId>
-    <artifactId>nacos-rpc-dubbo-provider</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>nacos-rpc-dubbo-provider</name>
-    <description>Demo project for Spring Boot</description>
-
-    <parent>
-        <groupId>com.cn</groupId>
-        <artifactId>dubbomanage</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-<!--
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.8.RELEASE</version>
-        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
--->
+    <groupId>com.cn</groupId>
+    <artifactId>nacos-rpc-dubbo-consumer</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>nacos-rpc-dubbo-consumer</name>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.cn</groupId>
+            <artifactId>dubbo-rpc-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- dubbo -->
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
@@ -47,26 +42,6 @@
             <artifactId>nacos-client</artifactId>
             <version>1.2.1</version>
         </dependency>
-
-        <!-- Dubbo Registry Nacos -->
-        <!--<dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-registry-nacos</artifactId>
-            <version>2.7.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba.nacos</groupId>
-            <artifactId>nacos-client</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba.spring</groupId>
-            <artifactId>spring-context-support</artifactId>
-            <version>1.0.6</version>
-        </dependency>-->
-
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -78,13 +53,9 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>com.cn</groupId>
-            <artifactId>dubbo-rpc-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
