spring-boot-dubbo

--- a/nacos-rpc-dubbo-provider/pom.xml
+++ b/nacos-rpc-dubbo-provider/pom.xml
@@ -11,7 +11,7 @@
 
     <parent>
         <groupId>com.cn</groupId>
-        <artifactId>dubbomanage</artifactId>
+        <artifactId>spring-boot-dubbo</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
