--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.cn</groupId>
-    <artifactId>dubbomanage</artifactId>
+    <artifactId>spring-boot-dubbo</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -18,8 +18,10 @@
     <modules>
         <module>user-rpc-dubbo-consumer</module>
         <module>user-rpc-dubbo-provider</module>
+        <module>user-rpc-dubbo-provider2</module>
         <module>dubbo-rpc-api</module>
         <module>nacos-rpc-dubbo-provider</module>
+        <module>nacos-rpc-dubbo-consumer</module>
     </modules>
 
     <dependencyManagement>
